--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,25 @@
 development:
-  adapter: postgres
-  database: gimmecar
-  username: root
-  password:
-  host: localhost
-  port: 3306
+  adapter: postgresql
+  database: gimmecar_development
+  username: postgres
+  password: root
+  port: 5432
 
 production:
-  adapter: postgres
+  adapter: postgresql
   encoding: utf8
   database: <%= ENV["DATABASE_NAME"] %>
   username: <%= ENV["DATABASE_USERNAME"] %>
   password: <%= ENV["DATABASE_PASSWORD"] %>
   host: <%= ENV["DATABASE_URL"] %>
-  port: 3306
+  port: 5432
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgres
+  adapter: postgresql
   database: gimmecar_test
-  username: root
-  password:
+  username: postgres
+  password: root
   encoding: utf8
