--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "test": "karma start ./spec/frontend/karma.conf.js"
   },
   "dependencies": {
+    "css-loader": "^0.26.1",
     "node-sass": "^4.1.0",
     "pug": "^2.0.0-beta6",
     "sass-loader": "^4.1.0",
+    "snabbt.js": "^0.6.4",
+    "vue": "^2.1.6",
     "vue-loader": "^10.0.2",
+    "vue-template-compiler": "^2.1.6",
     "webpack": "2.2.0-rc.1"
   }
 }
