date fix, should be correct timezone via javascript

--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "babel-preset-es2016": "^6.16.0",
     "css-loader": "^0.26.1",
     "lodash": "^4.17.3",
+    "moment": "^2.17.1",
+    "moment-timezone": "^0.5.11",
     "node-sass": "^4.1.0",
     "postcss-loader": "^1.2.1",
     "promise-polyfill": "^6.0.2",
     "pug": "^2.0.0-beta6",
     "sass-loader": "^4.1.0",
     "snabbt.js": "^0.6.4",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
     "vue": "^2.1.6",
     "vue-loader": "^10.0.2",
     "vue-template-compiler": "^2.1.6",
