--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "stylus-loader": "^2.4.0",
     "vue": "^2.1.6",
     "vue-loader": "^10.0.2",
+    "vue-router": "^2.1.1",
     "vue-template-compiler": "^2.1.6",
     "webpack": "2.2.0-rc.3"
   }
