--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "author": "Samay Patel <samay@gimmecar.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack -w -d --display-reasons --progress --hide-modules --config ./config/webpack.js",
-    "test": "karma start ./spec/frontend/karma.conf.js",
-    "heroku-postbuild": "webpack -p --config ./config/webpack.js"
+    "dev": "webpack-dev-server --config ./config/webpack/development.js",
+    "test": "karma start ./spec/frontend/karma.conf.js"
   },
   "babel": {
     "presets": [
-      "es2015",
-      "es2016"
+      [
+        "es2015",
+        {
+          "modules": false
+        }
+      ]
     ]
   },
   "postcss": {},
@@ -24,10 +27,12 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "css-loader": "^0.26.1",
+    "express": "^4.14.0",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
     "node-sass": "^4.1.0",
+    "path-complete-extname": "^0.1.0",
     "postcss-loader": "^1.2.1",
     "promise-polyfill": "^6.0.2",
     "pug": "^2.0.0-beta6",
@@ -39,6 +44,9 @@
     "vue-loader": "^10.0.2",
     "vue-router": "^2.1.1",
     "vue-template-compiler": "^2.1.6",
-    "webpack": "2.2.0-rc.3"
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.15.0",
+    "webpack-merge": "^2.4.0"
   }
 }
