staging settings added

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,3 @@
-development:
-  adapter: postgresql
-  database: gimmecar_development
-  username: postgres
-  password: root
-  encoding: utf8
-  pool: 5
-
 production:
   adapter: postgresql
   encoding: utf8
@@ -14,6 +6,23 @@ production:
   password: <%= ENV["DATABASE_PASSWORD"] %>
   host: <%= ENV["DATABASE_HOST"] %>
   port: 5432
+
+staging:
+  adapter: postgresql
+  encoding: utf8
+  database: <%= ENV["DATABASE_NAME"] %>
+  username: <%= ENV["DATABASE_USERNAME"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  host: <%= ENV["DATABASE_HOST"] %>
+  port: 5432
+
+development:
+  adapter: postgresql
+  database: gimmecar_development
+  username: postgres
+  password: root
+  encoding: utf8
+  pool: 5
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
