--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Samay Patel <samay@gimmecar.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --progress --inline --config ./config/webpack/development.js",
+    "dev": "./bin/webpack-dev-server",
     "test": "karma start ./spec/frontend/karma.conf.js"
   },
   "babel": {
@@ -21,33 +21,45 @@
   },
   "postcss": {},
   "dependencies": {
+    "autoprefixer": "^6.7.7",
     "axios": "^0.15.3",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
-    "css-loader": "^0.26.1",
+    "compression-webpack-plugin": "^0.4.0",
+    "css-loader": "^0.28.0",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "glob": "^7.1.1",
+    "js-yaml": "^3.8.3",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
-    "node-sass": "^4.1.0",
+    "node-sass": "^4.5.2",
     "path-complete-extname": "^0.1.0",
-    "postcss-loader": "^1.2.1",
+    "postcss-loader": "^1.3.3",
+    "postcss-smart-import": "^0.6.12",
+    "precss": "^1.4.0",
     "promise-polyfill": "^6.0.2",
     "pug": "^2.0.0-beta6",
-    "sass-loader": "^4.1.0",
+    "rails-erb-loader": "^5.0.0",
+    "sass-loader": "^6.0.3",
     "signature_pad": "^1.5.3",
     "snabbt.js": "^0.6.4",
+    "style-loader": "^0.16.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
     "vue": "^2.1.6",
     "vue-loader": "^10.0.2",
     "vue-router": "^2.1.1",
     "vue-template-compiler": "^2.1.6",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^1.16.2",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.3",
     "webpack-hot-middleware": "^2.15.0",
-    "webpack-merge": "^2.4.0"
+    "webpack-manifest-plugin": "^1.1.0",
+    "webpack-merge": "^4.1.0"
   }
 }
