--- a/package.json
+++ b/package.json
@@ -9,55 +9,47 @@
     "dev": "./bin/webpack-dev-server",
     "test": "karma start ./spec/frontend/karma.conf.js"
   },
-  "babel": {
-    "presets": [
-      [
-        "es2015",
-        {
-          "modules": false
-        }
-      ]
-    ]
-  },
-  "postcss": {},
   "dependencies": {
-    "autoprefixer": "^6.7.7",
+    "autoprefixer": "^7.1.1",
     "axios": "^0.15.3",
     "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-loader": "7.x",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "compression-webpack-plugin": "^0.4.0",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.2",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
-    "glob": "^7.1.1",
-    "js-yaml": "^3.8.3",
+    "glob": "^7.1.2",
+    "js-yaml": "^3.8.4",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
-    "postcss-loader": "^1.3.3",
-    "postcss-smart-import": "^0.6.12",
+    "postcss-loader": "^2.0.5",
+    "postcss-smart-import": "^0.7.2",
     "precss": "^1.4.0",
     "promise-polyfill": "^6.0.2",
     "pug": "^2.0.0-beta6",
-    "rails-erb-loader": "^5.0.0",
-    "sass-loader": "^6.0.3",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.5",
     "signature_pad": "^1.5.3",
     "snabbt.js": "^0.6.4",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.18.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
     "vue": "^2.1.6",
     "vue-loader": "^10.0.2",
     "vue-router": "^2.1.1",
     "vue-template-compiler": "^2.1.6",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.3",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.15.0",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0"
