--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "./bin/webpack-dev-server",
+    "dev-test": "RAILS_ENV=test ./bin/webpack-watcher",
     "test": "karma start ./spec/frontend/karma.conf.js"
   },
   "dependencies": {
