--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "vue-router": "^2.1.1",
     "vue-template-compiler": "^2.1.6",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.15.0",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.15.0"
   }
 }
