--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
-    "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^2.0.5",
     "postcss-smart-import": "^0.7.2",
@@ -39,7 +38,6 @@
     "promise-polyfill": "^6.0.2",
     "pug": "^2.0.0-beta6",
     "resolve-url-loader": "^2.0.2",
-    "sass-loader": "^6.0.5",
     "signature_pad": "^1.5.3",
     "snabbt.js": "^0.6.4",
     "style-loader": "^0.18.1",
@@ -50,9 +48,11 @@
     "vue-router": "^2.1.1",
     "vue-template-compiler": "^2.1.6",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.15.0",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.15.0"
   }
 }
