--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "frappe-charts": "^0.0.8",
     "glob": "^7.1.2",
     "js-yaml": "^3.8.4",
     "lodash": "^4.17.3",
