--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.2",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.1",
     "glob": "^7.1.2",
     "highcharts": "^6.0.7",
@@ -49,12 +49,13 @@
     "vue-loader": "^10.0.2",
     "vue-router": "^2.1.1",
     "vue-template-compiler": "^2.1.6",
-    "webpack": "^2.6.1",
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.10",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.15.0"
+    "webpack-dev-server": "^2.11.1",
+    "webpack-hot-middleware": "^2.21.2"
   }
 }
