--- a/package.json
+++ b/package.json
@@ -11,28 +11,32 @@
     "test": "karma start ./spec/frontend/karma.conf.js"
   },
   "dependencies": {
-    "autoprefixer": "^7.1.1",
     "axios": "^0.15.3",
+    "highcharts": "^6.0.7",
+    "lodash": "^4.17.3",
+    "moment": "^2.17.1",
+    "moment-range": "^3.0.3",
+    "moment-timezone": "^0.5.11",
+    "signature_pad": "^1.5.3",
+    "snabbt.js": "^0.6.4",
+    "vue": "^2.1.6",
+    "vue-router": "^2.1.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.24.1",
     "babel-loader": "7.x",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.1",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2016": "^6.16.0",
     "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.2",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.1",
     "glob": "^7.1.2",
-    "highcharts": "^6.0.7",
     "js-yaml": "^3.8.4",
-    "lodash": "^4.17.3",
-    "moment": "^2.17.1",
-    "moment-range": "^3.0.3",
-    "moment-timezone": "^0.5.11",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^2.0.5",
     "postcss-smart-import": "^0.7.2",
@@ -40,22 +44,16 @@
     "promise-polyfill": "^6.0.2",
     "pug": "^2.0.0-beta6",
     "resolve-url-loader": "^2.0.2",
-    "signature_pad": "^1.5.3",
-    "snabbt.js": "^0.6.4",
     "style-loader": "^0.18.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
-    "vue": "^2.1.6",
     "vue-loader": "^10.0.2",
-    "vue-router": "^2.1.1",
     "vue-template-compiler": "^2.1.6",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^2.11.1",
+    "webpack-hot-middleware": "^2.21.2",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^2.11.1",
-    "webpack-hot-middleware": "^2.21.2"
   }
 }
