--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "moment-timezone": "^0.5.11",
     "signature_pad": "^1.5.3",
     "snabbt.js": "^0.6.4",
-    "vue": "^2.1.6",
+    "vue": "^2.5.15",
     "vue-router": "^2.1.1"
   },
   "devDependencies": {
+    "@rails/webpacker": "^3.3.1",
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.24.1",
     "babel-loader": "7.x",
@@ -47,8 +48,8 @@
     "style-loader": "^0.18.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
-    "vue-loader": "^10.0.2",
-    "vue-template-compiler": "^2.1.6",
+    "vue-loader": "^14.2.1",
+    "vue-template-compiler": "^2.5.15",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^2.11.1",
