--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,19 +7,20 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-amazon:
+digital_ocean:
   service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  access_key_id: <%= ENV("DO_ACCESS_KEY_ID") %>
+  secret_access_key: <%= ENV("DO_SECRET_ACCESS_KEY") %>
   region: nyc3
-  bucket: production-gimmecar
+  bucket: <%= ENV("DO_BUCKET") %>
+  endpoint: <%= ENV("DO_ENDPOINT") %>
 
 # Remember not to checkin your GCS keyfile to a repository
 google:
   service: GCS
-  project: 817742674751
-  credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
-  bucket: gimmecar
+  project: <%= ENV('GOOGLE_PROJECT_ID') %>
+  credentials: <%= ENV('GOOGLE_CREDENTIALS') %>
+  bucket: <%= ENV("GOOGLE_BUCKET") %>
 
 # Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
 # microsoft:
