storage yml change for production

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -29,7 +29,7 @@ google:
 #   storage_access_key: <%= Rails.application.credentials.dig(:azure_storage, :storage_access_key) %>
 #   container: your_container_name
 
-mirror:
+production:
   service: Mirror
   primary: google
   mirrors:
