--- a/config/storage.yml
+++ b/config/storage.yml
@@ -17,8 +17,18 @@ digital_ocean:
 # Remember not to checkin your GCS keyfile to a repository
 google:
   service: GCS
-  project: <%= ENV['GOOGLE_PROJECT_ID'] %>
-  credentials: <%= ENV['GOOGLE_CREDENTIALS'] %>
+  credentials:
+    type: 'service_account'
+    project_id: <%= ENV['GOOGLE_PROJECT_ID'] %>
+    private_key_id: <%= ENV['GOOGLE_PRIVATE_KEY_ID'] %>
+    private_key: <%= ENV['GOOGLE_PRIVATE_KEY'] %>
+    client_email: <%= ENV['GOOGLE_CLIENT_EMAIL'] %>
+    client_id: <%= ENV['GOOGLE_CLIENT_ID'] %>
+    auth_uri: 'https://accounts.google.com/o/oauth2/auth'
+    token_uri: 'https://accounts.google.com/o/oauth2/token'
+    auth_provider_x509_cert_url: 'https://www.googleapis.com/oauth2/v1/certs'
+    client_x509_cert_url: <%= ENV['GOOGLE_CLIENT_CERT_URL'] %>
+  project: <%= ENV['GOOGLE_PROJECT'] %>
   bucket: <%= ENV['GOOGLE_BUCKET'] %>
 
 # Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
