--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "css-loader": "^0.28.2",
+    "fuse.js": "^3.2.0",
     "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "moment-range": "^3.0.3",
