--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,10 @@
   "plugins": [
     "syntax-dynamic-import",
     ["transform-class-properties", { "spec": true }]
-  ]
+  ],
+  "env": {
+    "test": {
+      "presets": ["env"]
+    }
+  }
 }
