--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "webpack": "^3.11.0"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.15",
     "babel-jest": "^22.4.3",
     "compression-webpack-plugin": "^0.4.0",
     "express": "^4.14.0",
