--- a/db/seeds/locations.yml
+++ b/db/seeds/locations.yml
@@ -19,4 +19,4 @@
     - amount:       3600
       vehicle_type: 'compact'
     - amount:       3300
-      vehicle_type: 'sub_compact'
+      vehicle_type: 'subcompact'
