option to choose source when extending rental

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "repository": "git@github.com:smyptl/gimmecar.git",
   "author": "Samay Patel <samay@gimmecar.com>",
+  "private": true,
   "license": "MIT",
   "scripts": {
     "dev": "./bin/webpack-dev-server",
